--- a/src/styles/FadeAnimation.css
+++ b/src/styles/FadeAnimation.css
@@ -1,33 +1,27 @@
-.fade-enter
-{
+.fade-enter {
 	opacity: 0;
 }
 
-.fade-enter-active
-{
+.fade-enter-active {
 	pointer-events: none;
 	opacity: 1;
 	transition: opacity 500ms;
 }
 
-.fade-enter-done
-{
+.fade-enter-done {
 	opacity: 1;
 }
 
-.fade-exit
-{
+.fade-exit {
 	opacity: 1;
 }
 
-.fade-exit-active
-{
+.fade-exit-active {
 	pointer-events: none;
 	opacity: 0;
 	transition: opacity 500ms;
 }
 
-.fade-exit-done
-{
+.fade-exit-done {
 	opacity: 0;
 }
